# cargo-liquid

./: .gitignore  Cargo.toml  README.md  build.rs  contract.abi  rust-toolchain.toml
.github/workflows/: workflow.yml
src/: main.rs  workspace.rs
src/analyzer/: callbacks.rs  known_names.rs  main.rs
src/analyzer/control_flow/: builder.rs  cfg.rs  cha_builder.rs  mod.rs  pfg.rs  utils.rs
src/analyzer/ifds/: binary_domain.rs  mod.rs  problem.rs  solver.rs
src/analyzer/ifds/problems/: conflict_fields.rs  mod.rs  uninitialized_states.rs
src/cmd/: build.rs  mod.rs  new.rs
src/main/: main.rs  utils.rs  workspace.rs
src/main/cmd/: build.rs  mod.rs  rename.rs
template/: _Cargo.toml  lib.rs
template/.liquid/abi_gen/: _Cargo.toml  main.rs
template/collaboration/: _Cargo.toml  rust-toolchain.toml
template/collaboration/.liquid/abi_gen/: _Cargo.toml  main.rs
template/collaboration/src/: lib.rs
template/contract/: _Cargo.toml  lib.rs
template/contract/.liquid/abi_gen/: _Cargo.toml  main.rs
tests/conflict_analysis_test/: verify_conflict.py
tests/conflict_analysis_test/contract/: 1.log.txt  Cargo.toml  output.txt
tests/conflict_analysis_test/contract/.liquid/abi_gen/: Cargo.toml  main.rs
tests/conflict_analysis_test/contract/src/: lib.rs
