[package]
name = "cargo-liquid"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
anyhow = "1.0.32"
structopt = "0.3.16"
heck = "0.3.1"
colored = "2.0.0"
zip = "0.5.6"

[build-dependencies]
anyhow = "1.0.32"
zip = "0.5.6"
walkdir = "2.3.1"