[package]
name = "cargo-liquid"
version = "0.3.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
anyhow = "1.0.32"
structopt = "0.3.16"
heck = "0.3.1"
colored = "2.0.0"
zip = "0.5.6"
cargo_metadata = "0.11.1"
rustc_version = "0.2.3"
cargo-xbuild = "0.6.4"
toml = "0.5.6"
tempfile = "3.1.0"
parity-wasm = "0.41.0"
pwasm-utils = "0.14.0"
which = "4.0.2"
indicatif = { version = "0.15.0", features = ["rayon", "improved_unicode"] }
console = { version = "0.13.0" }

[build-dependencies]
anyhow = "1.0.32"
zip = "0.5.6"
walkdir = "2.3.1"